cilium/fqdn-egress-bci.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: fqdn-egress-bci
spec:
  endpointSelector:
    matchLabels:
      app: bci-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.synchron-bci.example.com
        - matchPattern: "*.neuralink.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
